<resources>
    <string name="app_name">locaTO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="item_txtTitleCard">Title</string>
    <string name="button_Map">Open in Google Maps</string>
    <string name="item_txtDistanceCard">Distance</string>
    <string name="item_txtTimeCard">Time</string>
    <string name="item_txtAddressCard">Address</string>
    <string name="item_txtTagsCard">Tags</string>
    <string name="item_txtDescriptionCard">Description</string>

    <string name="title_activity_categories">CategoriesActivity</string>

    <string name="categories">Categories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
