<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_dark"
        android:weightSum="1"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_logo" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/eventImageCard"
        android:paddingTop="10dp"
        android:text="@string/button_Map"/>

    <TextView
        android:id="@+id/item_txtTitleCard"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_txtTitleCard"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/item_txtTimeCard"
        android:layout_alignEnd="@+id/item_txtTimeCard" />

    <TextView
        android:id="@+id/item_txtTimeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/item_txtTimeCard"
        android:layout_below="@+id/item_txtTitleCard"
        android:layout_alignRight="@+id/item_txtTagsCard"
        android:layout_alignEnd="@+id/item_txtTagsCard" />

    <TextView
        android:id="@+id/item_txtAddressCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/item_txtAddressCard"
        android:layout_below="@+id/item_txtCostCard"
        android:layout_alignRight="@+id/item_txtTagsCard"
        android:layout_alignEnd="@+id/item_txtTagsCard" />

    <TextView
        android:id="@+id/item_txtCostCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="Cost"
        android:layout_below="@+id/item_txtTimeCard"
        android:layout_alignRight="@+id/item_txtTimeCard"
        android:layout_alignEnd="@+id/item_txtTimeCard" />

    <TextView
        android:id="@+id/item_txtTagsCard"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/item_txtTagsCard"
        android:textAllCaps="false"
        android:layout_below="@+id/item_txtDescriptionCard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/item_txtDescriptionCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/item_txtAddressCard"
        android:text="@string/item_txtDescriptionCard"
        android:paddingLeft="5dp"
        android:layout_alignRight="@+id/item_txtTagsCard"
        android:layout_alignEnd="@+id/item_txtTagsCard" />
</LinearLayout>
</RelativeLayout>